--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -5,15 +5,59 @@
    "execution_count": null,
    "id": "ed906d93",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "GraphKey.random_key() takes 0 positional arguments but 1 was given",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 19\u001b[39m\n\u001b[32m     16\u001b[39m         batch_id = \u001b[38;5;28mstr\u001b[39m(uuid.uuid4())\n\u001b[32m     17\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(\u001b[38;5;28mid\u001b[39m=\u001b[38;5;28mid\u001b[39m, ref=ref, batch_id=batch_id)\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mGraphKey\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrandom_key\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
+      "\u001b[31mTypeError\u001b[39m: GraphKey.random_key() takes 0 positional arguments but 1 was given"
+     ]
+    }
+   ],
    "source": [
-    "print(\"Hello, world!\")"
+    "from dataclasses import dataclass\n",
+    "import random\n",
+    "import uuid\n",
+    "\n",
+    "@dataclass\n",
+    "class GraphKey:\n",
+    "    id: str\n",
+    "    ref: str\n",
+    "    batch_id: str\n",
+    "\n",
+    "    @classmethod\n",
+    "    def random(cls) -> \"GraphKey\":\n",
+    "        \"\"\"Generate a random graph key string\"\"\"\n",
+    "        id = str(uuid.uuid4())\n",
+    "        ref = ''.join(random.choices('ABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789', k=12))\n",
+    "        batch_id = str(uuid.uuid4())\n",
+    "        return cls(id=id, ref=ref, batch_id=batch_id)\n",
+    "    \n",
+    "print(GraphKey.random())"
    ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": ".venv",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
