--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "ed906d93",
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "GraphKey.random_key() takes 0 positional arguments but 1 was given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[1]\u001b[39m\u001b[32m, line 19\u001b[39m\n\u001b[32m     16\u001b[39m         batch_id = \u001b[38;5;28mstr\u001b[39m(uuid.uuid4())\n\u001b[32m     17\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mcls\u001b[39m(\u001b[38;5;28mid\u001b[39m=\u001b[38;5;28mid\u001b[39m, ref=ref, batch_id=batch_id)\n\u001b[32m---> \u001b[39m\u001b[32m19\u001b[39m \u001b[38;5;28mprint\u001b[39m(\u001b[43mGraphKey\u001b[49m\u001b[43m.\u001b[49m\u001b[43mrandom_key\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m)\n",
-      "\u001b[31mTypeError\u001b[39m: GraphKey.random_key() takes 0 positional arguments but 1 was given"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "GraphKey(id='9582f208-17de-44d2-ad77-dd8725d3c34f', ref='8P7BJUZ1789N', batch_id='f1b3bb55-dd4f-4022-88ed-391bbe80d5e2')\n"
      ]
     }
    ],
@@ -38,6 +34,220 @@
     "        return cls(id=id, ref=ref, batch_id=batch_id)\n",
     "    \n",
     "print(GraphKey.random())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "87a97755",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'vertex_id': 1, 'version': 0}\n"
+     ]
+    }
+   ],
+   "source": [
+    "from dataclasses import asdict, dataclass\n",
+    "\n",
+    "@dataclass\n",
+    "class VertexKey:\n",
+    "    vertex_id: int\n",
+    "    version: int = 0\n",
+    "\n",
+    "print(asdict(VertexKey(1)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67e8dded",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "matrix world-class portals\n"
+     ]
+    }
+   ],
+   "source": [
+    "from faker import Faker\n",
+    "\n",
+    "fake = Faker()\n",
+    "print(fake.name())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "083f582d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bf3573811f4dbad380eff0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from secrets import token_hex\n",
+    "\n",
+    "hex40 = token_hex(11)  # 20 bytes -> 40 hex chars\n",
+    "print(hex40)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "297ef29f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"uid\": \"71da97755fac1de6bd591f\", \"type\": \"qs.interpolation\", \"size\": 29581, \"to_string\": \"qs.interpolation estimates missing values between data points.\", \"serialization_duration\": null}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import uuid\n",
+    "import random\n",
+    "from datetime import datetime, timedelta\n",
+    "from typing import List, Dict, Any, Optional, Tuple\n",
+    "from dataclasses import asdict, dataclass\n",
+    "from collections import defaultdict\n",
+    "from faker import Faker\n",
+    "from secrets import token_hex\n",
+    "\n",
+    "vertex_functions: List[Tuple[str, str]] = [\n",
+    "    (\"ab.mean\", \"ab.mean calculates the average value across a dataset.\"),\n",
+    "    (\"xy.median\", \"xy.median returns the middle value in a sorted numeric list.\"),\n",
+    "    (\"qp.variance\", \"qp.variance measures how far values spread from the mean.\"),\n",
+    "    (\"rt.stddev\", \"rt.stddev computes the standard deviation of numeric data.\"),\n",
+    "    (\"kl.percentile\", \"kl.percentile retrieves the value at a given percentile rank.\"),\n",
+    "    (\"mv.covariance\", \"mv.covariance calculates how two variables change together.\"),\n",
+    "    (\"fd.correlation\", \"fd.correlation computes correlation strength between variables.\"),\n",
+    "    (\"sn.regression\", \"sn.regression fits a predictive model to input data.\"),\n",
+    "    (\"tj.quantile\", \"tj.quantile extracts a specific quantile from a dataset.\"),\n",
+    "    (\"uv.autocorrelation\", \"uv.autocorrelation measures correlation of a signal with itself over time.\"),\n",
+    "    (\"wx.normalization\", \"wx.normalization rescales numeric data to a standard range.\"),\n",
+    "    (\"ce.smoothing\", \"ce.smoothing applies a smoothing filter to reduce noise.\"),\n",
+    "    (\"hn.derivative\", \"hn.derivative estimates the rate of change in a sequence.\"),\n",
+    "    (\"ps.integral\", \"ps.integral approximates the area under a curve.\"),\n",
+    "    (\"gy.forecast\", \"gy.forecast predicts future values using historical trends.\"),\n",
+    "    (\"zb.clustering\", \"zb.clustering groups similar data points into clusters.\"),\n",
+    "    (\"lk.classification\", \"lk.classification assigns items to predefined categories.\"),\n",
+    "    (\"op.tokenization\", \"op.tokenization splits text into tokens or meaningful units.\"),\n",
+    "    (\"mq.vectorization\", \"mq.vectorization converts items into numerical vectors.\"),\n",
+    "    (\"nr.embedding\", \"nr.embedding produces dense representations of entities.\"),\n",
+    "    (\"vf.anomaly\", \"vf.anomaly detects outlier or abnormal data patterns.\"),\n",
+    "    (\"du.segmentation\", \"du.segmentation partitions data into logical segments.\"),\n",
+    "    (\"ke.transformation\", \"ke.transformation applies linear or nonlinear transformations.\"),\n",
+    "    (\"ri.scaling\", \"ri.scaling rescales features according to provided factors.\"),\n",
+    "    (\"zo.centering\", \"zo.centering shifts data so that its mean becomes zero.\"),\n",
+    "    (\"tp.resampling\", \"tp.resampling generates a new sample distribution.\"),\n",
+    "    (\"qs.interpolation\", \"qs.interpolation estimates missing values between data points.\"),\n",
+    "    (\"fj.decimation\", \"fj.decimation reduces sample rate by a fixed factor.\"),\n",
+    "    (\"aw.filtering\", \"aw.filtering removes unwanted components from signals.\"),\n",
+    "    (\"ic.denoise\", \"ic.denoise reduces noise using statistical heuristics.\"),\n",
+    "    (\"bd.decomposition\", \"bd.decomposition breaks a signal into component parts.\"),\n",
+    "    (\"uj.factorization\", \"uj.factorization decomposes matrices into multiplicative factors.\"),\n",
+    "    (\"eg.rotation\", \"eg.rotation rotates vectors or matrices in n-dimensional space.\"),\n",
+    "    (\"hy.translation\", \"hy.translation shifts values by a constant amount.\"),\n",
+    "    (\"cw.windowing\", \"cw.windowing applies a window function to a signal segment.\"),\n",
+    "    (\"mk.differencing\", \"mk.differencing computes differences to improve stationarity.\"),\n",
+    "    (\"sl.stationarity\", \"sl.stationarity evaluates whether a time series is stationary.\"),\n",
+    "    (\"pn.gradient\", \"pn.gradient computes gradient values across a function.\"),\n",
+    "    (\"ro.hessian\", \"ro.hessian calculates second-order partial derivatives.\"),\n",
+    "    (\"yl.curvefit\", \"yl.curvefit fits a custom curve to observed data.\"),\n",
+    "    (\"jx.approximation\", \"jx.approximation approximates complex functions numerically.\"),\n",
+    "    (\"vd.bias\", \"vd.bias computes the systematic offset of a model's predictions.\"),\n",
+    "    (\"sf.kurtosis\", \"sf.kurtosis measures tail extremity of a distribution.\"),\n",
+    "    (\"em.skewness\", \"em.skewness measures asymmetry of a distribution.\"),\n",
+    "    (\"ag.entropy\", \"ag.entropy quantifies data unpredictability.\"),\n",
+    "    (\"bh.contrast\", \"bh.contrast enhances or measures contrast in images or signals.\"),\n",
+    "    (\"ci.sharpen\", \"ci.sharpen enhances edges or details in data.\"),\n",
+    "    (\"dj.blurring\", \"dj.blurring reduces detail by convolving with a blur kernel.\"),\n",
+    "    (\"eq.histogram\", \"eq.histogram computes frequency distribution over value bins.\"),\n",
+    "    (\"fw.binomial\", \"fw.binomial generates binomial probability distributions.\"),\n",
+    "    (\"gx.poisson\", \"gx.poisson evaluates Poisson distribution probabilities.\"),\n",
+    "    (\"hv.gaussian\", \"hv.gaussian produces Gaussian distribution values.\"),\n",
+    "    (\"ij.uniform\", \"ij.uniform generates uniform distribution samples.\"),\n",
+    "    (\"jk.convergence\", \"jk.convergence checks whether an algorithm has converged.\"),\n",
+    "    (\"kl.divergence\", \"kl.divergence computes divergence between two distributions.\"),\n",
+    "    (\"lm.optimization\", \"lm.optimization finds optimal parameters for a function.\"),\n",
+    "    (\"mn.minimization\", \"mn.minimization solves for the minimum of a function.\"),\n",
+    "    (\"no.maximization\", \"no.maximization solves for the maximum of a function.\"),\n",
+    "    (\"op.search\", \"op.search performs heuristic or structured search operations.\"),\n",
+    "    (\"pq.aggregate\", \"pq.aggregate combines multiple values using a rule.\"),\n",
+    "    (\"qr.combine\", \"qr.combine merges datasets or sequences intelligently.\"),\n",
+    "    (\"rs.segment\", \"rs.segment divides data into logical segments.\"),\n",
+    "    (\"st.cluster\", \"st.cluster creates groups based on statistical similarity.\"),\n",
+    "    (\"tu.label\", \"tu.label assigns labels to data based on rules.\"),\n",
+    "    (\"uv.project\", \"uv.project projects data into a different subspace.\"),\n",
+    "    (\"vw.reduce\", \"vw.reduce compresses data dimensionality or complexity.\"),\n",
+    "    (\"wx.expand\", \"wx.expand increases dimensionality with derived features.\"),\n",
+    "    (\"xy.embed\", \"xy.embed maps items into a lower-dimensional embedding space.\"),\n",
+    "    (\"yz.encode\", \"yz.encode converts structures into encoded representations.\"),\n",
+    "    (\"za.decode\", \"za.decode reconstructs data from encoded representations.\"),\n",
+    "    (\"ab.balance\", \"ab.balance balances class or value distributions.\"),\n",
+    "    (\"bc.weight\", \"bc.weight applies weights to samples or features.\"),\n",
+    "    (\"cd.score\", \"cd.score computes evaluation metrics for models.\"),\n",
+    "    (\"de.rank\", \"de.rank assigns rank ordering to values.\"),\n",
+    "    (\"ef.normalize\", \"ef.normalize scales values to unit magnitude.\"),\n",
+    "    (\"fg.standardize\", \"fg.standardize converts data to zero mean and unit variance.\"),\n",
+    "    (\"gh.summarize\", \"gh.summarize produces statistical summaries of datasets.\"),\n",
+    "    (\"hi.evaluate\", \"hi.evaluate computes model performance metrics.\"),\n",
+    "    (\"ij.validate\", \"ij.validate validates a model using test or split data.\"),\n",
+    "    (\"jk.calibrate\", \"jk.calibrate adjusts a model to improve accuracy.\"),\n",
+    "    (\"kl.measure\", \"kl.measure calculates specific analytical measurements.\"),\n",
+    "    (\"lm.sample\", \"lm.sample draws samples from a dataset or distribution.\"),\n",
+    "    (\"mn.bootstrap\", \"mn.bootstrap generates bootstrap sample sets.\"),\n",
+    "    (\"no.shuffle\", \"no.shuffle randomly shuffles the ordering of items.\"),\n",
+    "    (\"op.partition\", \"op.partition splits data into defined partitions.\"),\n",
+    "    (\"pq.align\", \"pq.align aligns two datasets or sequences for comparison.\"),\n",
+    "    (\"qr.match\", \"qr.match finds best matches between datasets or patterns.\"),\n",
+    "    (\"rs.extract\", \"rs.extract pulls relevant features or components from data.\"),\n",
+    "    (\"st.compute\", \"st.compute performs a general analytical computation.\"),\n",
+    "    (\"tu.simulate\", \"tu.simulate simulates system behavior using a model.\"),\n",
+    "    (\"uv.model\", \"uv.model constructs a statistical or predictive model.\"),\n",
+    "    (\"vw.analyze\", \"vw.analyze analyzes datasets to extract insights.\"),\n",
+    "    (\"wx.optimize\", \"wx.optimize improves function performance or parameters.\"),\n",
+    "    (\"xy.interpolate\", \"xy.interpolate fills in missing values using interpolation.\"),\n",
+    "    (\"yz.transform\", \"yz.transform applies one or more transformations.\"),\n",
+    "    (\"za.integrate\", \"za.integrate numerically computes an integral over data.\")\n",
+    "]\n",
+    "\n",
+    "# Global Faker instance\n",
+    "fake = Faker()\n",
+    "\n",
+    "@dataclass\n",
+    "class Variant:\n",
+    "    uid: str\n",
+    "    type: str\n",
+    "    size: int\n",
+    "    to_string: str\n",
+    "    serialization_duration: int = None\n",
+    "\n",
+    "    @classmethod\n",
+    "    def random_vertex_value(cls) -> \"Variant\":\n",
+    "        uid = token_hex(11) # 11 bytes -> 22 hex chars\n",
+    "        function = random.choice(vertex_functions)\n",
+    "        type = function[0]\n",
+    "        to_string = f\"{function[1]}\"\n",
+    "        return cls(uid=uid, type=type, size=random.randint(100, 100_000), to_string=to_string)\n",
+    "\n",
+    "\n",
+    "print(json.dumps(asdict(Variant.random_vertex_value())))"
    ]
   }
  ],
