--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "297ef29f",
    "metadata": {},
    "outputs": [
@@ -113,7 +113,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{\"uid\": \"71da97755fac1de6bd591f\", \"type\": \"qs.interpolation\", \"size\": 29581, \"to_string\": \"qs.interpolation estimates missing values between data points.\", \"serialization_duration\": null}\n"
+      "{\"uid\": \"8e5bf05018a1ce6f0c8879\", \"type\": \"qr.combine\", \"size\": 46748, \"to_string\": \"qr.combine merges datasets or sequences intelligently.\", \"serialization_duration\": null}\n"
      ]
     }
    ],
@@ -248,6 +248,161 @@
     "\n",
     "\n",
     "print(json.dumps(asdict(Variant.random_vertex_value())))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "32ea7f2a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ab.mean\n",
+      "ab.mean calculates the average value across a dataset.\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple = (\"ab.mean\", \"ab.mean calculates the average value across a dataset.\")\n",
+    "(type, to_string) = tuple\n",
+    "print(type)\n",
+    "print(to_string)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "163a7411",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('rs.extract', 'rs.extract pulls relevant features or components from data.'), ('cd.score', 'cd.score computes evaluation metrics for models.'), ('mn.bootstrap', 'mn.bootstrap generates bootstrap sample sets.'), ('tu.simulate', 'tu.simulate simulates system behavior using a model.'), ('uj.factorization', 'uj.factorization decomposes matrices into multiplicative factors.'), ('tu.label', 'tu.label assigns labels to data based on rules.'), ('bh.contrast', 'bh.contrast enhances or measures contrast in images or signals.'), ('kl.divergence', 'kl.divergence computes divergence between two distributions.'), ('mv.covariance', 'mv.covariance calculates how two variables change together.'), ('ps.integral', 'ps.integral approximates the area under a curve.'), ('mn.minimization', 'mn.minimization solves for the minimum of a function.'), ('kl.measure', 'kl.measure calculates specific analytical measurements.'), ('op.search', 'op.search performs heuristic or structured search operations.'), ('uv.model', 'uv.model constructs a statistical or predictive model.'), ('qr.match', 'qr.match finds best matches between datasets or patterns.'), ('vw.reduce', 'vw.reduce compresses data dimensionality or complexity.'), ('ce.smoothing', 'ce.smoothing applies a smoothing filter to reduce noise.'), ('wx.expand', 'wx.expand increases dimensionality with derived features.'), ('jk.calibrate', 'jk.calibrate adjusts a model to improve accuracy.'), ('cw.windowing', 'cw.windowing applies a window function to a signal segment.'), ('lm.optimization', 'lm.optimization finds optimal parameters for a function.'), ('ri.scaling', 'ri.scaling rescales features according to provided factors.'), ('xy.median', 'xy.median returns the middle value in a sorted numeric list.'), ('lk.classification', 'lk.classification assigns items to predefined categories.'), ('qp.variance', 'qp.variance measures how far values spread from the mean.'), ('st.compute', 'st.compute performs a general analytical computation.'), ('op.tokenization', 'op.tokenization splits text into tokens or meaningful units.'), ('yz.transform', 'yz.transform applies one or more transformations.'), ('rs.segment', 'rs.segment divides data into logical segments.'), ('no.shuffle', 'no.shuffle randomly shuffles the ordering of items.'), ('wx.normalization', 'wx.normalization rescales numeric data to a standard range.'), ('dj.blurring', 'dj.blurring reduces detail by convolving with a blur kernel.'), ('eg.rotation', 'eg.rotation rotates vectors or matrices in n-dimensional space.'), ('wx.optimize', 'wx.optimize improves function performance or parameters.'), ('pn.gradient', 'pn.gradient computes gradient values across a function.'), ('du.segmentation', 'du.segmentation partitions data into logical segments.'), ('ef.normalize', 'ef.normalize scales values to unit magnitude.'), ('qs.interpolation', 'qs.interpolation estimates missing values between data points.'), ('de.rank', 'de.rank assigns rank ordering to values.'), ('xy.embed', 'xy.embed maps items into a lower-dimensional embedding space.'), ('sn.regression', 'sn.regression fits a predictive model to input data.'), ('sf.kurtosis', 'sf.kurtosis measures tail extremity of a distribution.'), ('vf.anomaly', 'vf.anomaly detects outlier or abnormal data patterns.'), ('uv.autocorrelation', 'uv.autocorrelation measures correlation of a signal with itself over time.'), ('uv.project', 'uv.project projects data into a different subspace.'), ('hn.derivative', 'hn.derivative estimates the rate of change in a sequence.'), ('tj.quantile', 'tj.quantile extracts a specific quantile from a dataset.'), ('qr.combine', 'qr.combine merges datasets or sequences intelligently.'), ('vd.bias', \"vd.bias computes the systematic offset of a model's predictions.\"), ('bc.weight', 'bc.weight applies weights to samples or features.')]\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "import uuid\n",
+    "import random\n",
+    "from datetime import datetime, timedelta\n",
+    "from typing import List, Dict, Any, Optional, Tuple\n",
+    "from dataclasses import asdict, dataclass\n",
+    "from collections import defaultdict\n",
+    "from faker import Faker\n",
+    "from secrets import token_hex\n",
+    "\n",
+    "vertex_values: List[Tuple[str, str]] = [\n",
+    "    (\"ab.mean\", \"ab.mean calculates the average value across a dataset.\"),\n",
+    "    (\"xy.median\", \"xy.median returns the middle value in a sorted numeric list.\"),\n",
+    "    (\"qp.variance\", \"qp.variance measures how far values spread from the mean.\"),\n",
+    "    (\"rt.stddev\", \"rt.stddev computes the standard deviation of numeric data.\"),\n",
+    "    (\"kl.percentile\", \"kl.percentile retrieves the value at a given percentile rank.\"),\n",
+    "    (\"mv.covariance\", \"mv.covariance calculates how two variables change together.\"),\n",
+    "    (\"fd.correlation\", \"fd.correlation computes correlation strength between variables.\"),\n",
+    "    (\"sn.regression\", \"sn.regression fits a predictive model to input data.\"),\n",
+    "    (\"tj.quantile\", \"tj.quantile extracts a specific quantile from a dataset.\"),\n",
+    "    (\"uv.autocorrelation\", \"uv.autocorrelation measures correlation of a signal with itself over time.\"),\n",
+    "    (\"wx.normalization\", \"wx.normalization rescales numeric data to a standard range.\"),\n",
+    "    (\"ce.smoothing\", \"ce.smoothing applies a smoothing filter to reduce noise.\"),\n",
+    "    (\"hn.derivative\", \"hn.derivative estimates the rate of change in a sequence.\"),\n",
+    "    (\"ps.integral\", \"ps.integral approximates the area under a curve.\"),\n",
+    "    (\"gy.forecast\", \"gy.forecast predicts future values using historical trends.\"),\n",
+    "    (\"zb.clustering\", \"zb.clustering groups similar data points into clusters.\"),\n",
+    "    (\"lk.classification\", \"lk.classification assigns items to predefined categories.\"),\n",
+    "    (\"op.tokenization\", \"op.tokenization splits text into tokens or meaningful units.\"),\n",
+    "    (\"mq.vectorization\", \"mq.vectorization converts items into numerical vectors.\"),\n",
+    "    (\"nr.embedding\", \"nr.embedding produces dense representations of entities.\"),\n",
+    "    (\"vf.anomaly\", \"vf.anomaly detects outlier or abnormal data patterns.\"),\n",
+    "    (\"du.segmentation\", \"du.segmentation partitions data into logical segments.\"),\n",
+    "    (\"ke.transformation\", \"ke.transformation applies linear or nonlinear transformations.\"),\n",
+    "    (\"ri.scaling\", \"ri.scaling rescales features according to provided factors.\"),\n",
+    "    (\"zo.centering\", \"zo.centering shifts data so that its mean becomes zero.\"),\n",
+    "    (\"tp.resampling\", \"tp.resampling generates a new sample distribution.\"),\n",
+    "    (\"qs.interpolation\", \"qs.interpolation estimates missing values between data points.\"),\n",
+    "    (\"fj.decimation\", \"fj.decimation reduces sample rate by a fixed factor.\"),\n",
+    "    (\"aw.filtering\", \"aw.filtering removes unwanted components from signals.\"),\n",
+    "    (\"ic.denoise\", \"ic.denoise reduces noise using statistical heuristics.\"),\n",
+    "    (\"bd.decomposition\", \"bd.decomposition breaks a signal into component parts.\"),\n",
+    "    (\"uj.factorization\", \"uj.factorization decomposes matrices into multiplicative factors.\"),\n",
+    "    (\"eg.rotation\", \"eg.rotation rotates vectors or matrices in n-dimensional space.\"),\n",
+    "    (\"hy.translation\", \"hy.translation shifts values by a constant amount.\"),\n",
+    "    (\"cw.windowing\", \"cw.windowing applies a window function to a signal segment.\"),\n",
+    "    (\"mk.differencing\", \"mk.differencing computes differences to improve stationarity.\"),\n",
+    "    (\"sl.stationarity\", \"sl.stationarity evaluates whether a time series is stationary.\"),\n",
+    "    (\"pn.gradient\", \"pn.gradient computes gradient values across a function.\"),\n",
+    "    (\"ro.hessian\", \"ro.hessian calculates second-order partial derivatives.\"),\n",
+    "    (\"yl.curvefit\", \"yl.curvefit fits a custom curve to observed data.\"),\n",
+    "    (\"jx.approximation\", \"jx.approximation approximates complex functions numerically.\"),\n",
+    "    (\"vd.bias\", \"vd.bias computes the systematic offset of a model's predictions.\"),\n",
+    "    (\"sf.kurtosis\", \"sf.kurtosis measures tail extremity of a distribution.\"),\n",
+    "    (\"em.skewness\", \"em.skewness measures asymmetry of a distribution.\"),\n",
+    "    (\"ag.entropy\", \"ag.entropy quantifies data unpredictability.\"),\n",
+    "    (\"bh.contrast\", \"bh.contrast enhances or measures contrast in images or signals.\"),\n",
+    "    (\"ci.sharpen\", \"ci.sharpen enhances edges or details in data.\"),\n",
+    "    (\"dj.blurring\", \"dj.blurring reduces detail by convolving with a blur kernel.\"),\n",
+    "    (\"eq.histogram\", \"eq.histogram computes frequency distribution over value bins.\"),\n",
+    "    (\"fw.binomial\", \"fw.binomial generates binomial probability distributions.\"),\n",
+    "    (\"gx.poisson\", \"gx.poisson evaluates Poisson distribution probabilities.\"),\n",
+    "    (\"hv.gaussian\", \"hv.gaussian produces Gaussian distribution values.\"),\n",
+    "    (\"ij.uniform\", \"ij.uniform generates uniform distribution samples.\"),\n",
+    "    (\"jk.convergence\", \"jk.convergence checks whether an algorithm has converged.\"),\n",
+    "    (\"kl.divergence\", \"kl.divergence computes divergence between two distributions.\"),\n",
+    "    (\"lm.optimization\", \"lm.optimization finds optimal parameters for a function.\"),\n",
+    "    (\"mn.minimization\", \"mn.minimization solves for the minimum of a function.\"),\n",
+    "    (\"no.maximization\", \"no.maximization solves for the maximum of a function.\"),\n",
+    "    (\"op.search\", \"op.search performs heuristic or structured search operations.\"),\n",
+    "    (\"pq.aggregate\", \"pq.aggregate combines multiple values using a rule.\"),\n",
+    "    (\"qr.combine\", \"qr.combine merges datasets or sequences intelligently.\"),\n",
+    "    (\"rs.segment\", \"rs.segment divides data into logical segments.\"),\n",
+    "    (\"st.cluster\", \"st.cluster creates groups based on statistical similarity.\"),\n",
+    "    (\"tu.label\", \"tu.label assigns labels to data based on rules.\"),\n",
+    "    (\"uv.project\", \"uv.project projects data into a different subspace.\"),\n",
+    "    (\"vw.reduce\", \"vw.reduce compresses data dimensionality or complexity.\"),\n",
+    "    (\"wx.expand\", \"wx.expand increases dimensionality with derived features.\"),\n",
+    "    (\"xy.embed\", \"xy.embed maps items into a lower-dimensional embedding space.\"),\n",
+    "    (\"yz.encode\", \"yz.encode converts structures into encoded representations.\"),\n",
+    "    (\"za.decode\", \"za.decode reconstructs data from encoded representations.\"),\n",
+    "    (\"ab.balance\", \"ab.balance balances class or value distributions.\"),\n",
+    "    (\"bc.weight\", \"bc.weight applies weights to samples or features.\"),\n",
+    "    (\"cd.score\", \"cd.score computes evaluation metrics for models.\"),\n",
+    "    (\"de.rank\", \"de.rank assigns rank ordering to values.\"),\n",
+    "    (\"ef.normalize\", \"ef.normalize scales values to unit magnitude.\"),\n",
+    "    (\"fg.standardize\", \"fg.standardize converts data to zero mean and unit variance.\"),\n",
+    "    (\"gh.summarize\", \"gh.summarize produces statistical summaries of datasets.\"),\n",
+    "    (\"hi.evaluate\", \"hi.evaluate computes model performance metrics.\"),\n",
+    "    (\"ij.validate\", \"ij.validate validates a model using test or split data.\"),\n",
+    "    (\"jk.calibrate\", \"jk.calibrate adjusts a model to improve accuracy.\"),\n",
+    "    (\"kl.measure\", \"kl.measure calculates specific analytical measurements.\"),\n",
+    "    (\"lm.sample\", \"lm.sample draws samples from a dataset or distribution.\"),\n",
+    "    (\"mn.bootstrap\", \"mn.bootstrap generates bootstrap sample sets.\"),\n",
+    "    (\"no.shuffle\", \"no.shuffle randomly shuffles the ordering of items.\"),\n",
+    "    (\"op.partition\", \"op.partition splits data into defined partitions.\"),\n",
+    "    (\"pq.align\", \"pq.align aligns two datasets or sequences for comparison.\"),\n",
+    "    (\"qr.match\", \"qr.match finds best matches between datasets or patterns.\"),\n",
+    "    (\"rs.extract\", \"rs.extract pulls relevant features or components from data.\"),\n",
+    "    (\"st.compute\", \"st.compute performs a general analytical computation.\"),\n",
+    "    (\"tu.simulate\", \"tu.simulate simulates system behavior using a model.\"),\n",
+    "    (\"uv.model\", \"uv.model constructs a statistical or predictive model.\"),\n",
+    "    (\"vw.analyze\", \"vw.analyze analyzes datasets to extract insights.\"),\n",
+    "    (\"wx.optimize\", \"wx.optimize improves function performance or parameters.\"),\n",
+    "    (\"xy.interpolate\", \"xy.interpolate fills in missing values using interpolation.\"),\n",
+    "    (\"yz.transform\", \"yz.transform applies one or more transformations.\"),\n",
+    "    (\"za.integrate\", \"za.integrate numerically computes an integral over data.\")\n",
+    "]\n",
+    "remoted_vertices: List[Tuple[str, str]] = random.sample(vertex_values, k=33)\n",
+    "\n",
+    "print(remoted_vertices)\n",
+    "\n",
+    "(type, to_string) = random.choice(vertex_values)\n",
+    "is_remoted = type in [t for (t, _) in remoted_vertices]\n",
+    "print(is_remoted)"
    ]
   }
  ],
